[project]
name = "python-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yqYo1", email = "miyasyrog@gmail.com" }
]
dependencies = [
    "ruff>=0.3.2",
    "pyright>=1.1.354",
    "python-lsp-ruff>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
