[project]
name = "python-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yqYo1", email = "yqyoi@yqyoi.sakura.ne.jp" }
]
dependencies = [
    "ruff>=0.3.2",
    "python-lsp-server>=1.11.0",
    "basedpyright>=1.12.2",
]
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
